--- a/package.json
+++ b/package.json
@@ -21,5 +21,10 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "server": "./server/www"
+  },
+  "proxy": {
+    "/user": {
+      "target": "http://localhost:3001"
+    }
   }
 }
